--- a/objects/index.html
+++ b/objects/index.html
@@ -16,13 +16,13 @@
   <nav>
     <a href="/">about</a>
     <a href="/archive">archive</a>
-    <a href="/objects">commission</a>
+    <a href="/objects">shop</a>
     <a href="/game">game</a>
   </nav>
 </header>
 
 <main>
-  <h1>commission</h1>
+  <h1>shop</h1>
   <!-- quiz banner -->
   <a class="quiz-banner" href="/quiz/" aria-label="find your perfect art figure">
     <span class="art">🧸</span>
