--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav>
         <a href="/">about</a>
         <a href="/archive">archive</a>
-        <a href="/objects">commission</a>
+        <a href="/objects">shop</a>
         <a href="/game">game</a>
     </nav>
 </header>
