--- a/objects/index.html
+++ b/objects/index.html
@@ -33,6 +33,19 @@
     <p>you can take these with you. or not.</p>
 
     <div class="product">
+      <img src="../assets/concrete1.jpg" alt="keychain" class="product-img" />
+      <div class="product-info">
+        <h3>concrete #1</h3>
+        <p>
+          handmade · raw concrete<br>
+          7 cm — €30<br>
+          10 cm — €50
+        </p>
+        <a href="https://instagram.com/evg.damk" class="cta-link" target="_blank">DM to order</a>
+      </div>
+    </div>
+
+    <div class="product">
       <img src="../assets/keychain1.jpg" alt="keychain" class="product-img" />
       <div class="product-info">
         <h3>keychain #1</h3>
