--- a/objects/index.html
+++ b/objects/index.html
@@ -1,112 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="damk is personal space — drawings, soft memories, small objects." />
-  <link rel="canonical" href="https://evgdamk.com/objects/" />
-  <title>goods — damk</title>
-  <link rel="stylesheet" href="../css/styles.css" />
-  <script data-goatcounter="https://damk.goatcounter.com/count"
-          async src="//gc.zgo.at/count.js"></script>
-  <link rel="icon" href="../assets/favicon.ico" type="image/x-icon" />
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="description" content="damk is personal space — drawings, soft memories, small objects."/>
+    <link rel="canonical" href="https://evgdamk.com/objects/"/>
+    <title>goods — damk</title>
+    <link rel="stylesheet" href="../css/styles.css"/>
+    <script data-goatcounter="https://damk.goatcounter.com/count"
+            async src="//gc.zgo.at/count.js"></script>
+    <link rel="icon" href="../assets/favicon.ico" type="image/x-icon"/>
 </head>
 <body>
 <header>
-  <nav>
-    <a href="/">about</a>
-    <a href="/archive">archive</a>
-    <a href="/objects">shop</a>
-    <a href="/game">game</a>
-  </nav>
+    <nav>
+        <a href="/">about</a>
+        <a href="/archive">archive</a>
+        <a href="/objects">shop</a>
+        <a href="/game">game</a>
+    </nav>
 </header>
 
 <main>
-  <h1>shop</h1>
-  <!-- quiz banner -->
-  <a class="quiz-banner" href="/quiz/" aria-label="find your perfect art figure">
-    <span class="art">🧸</span>
-    <span><strong>not sure what to choose?</strong><br>
+    <h1>shop</h1>
+    <!-- quiz banner -->
+    <a class="quiz-banner" href="/quiz/" aria-label="find your perfect art figure">
+        <span class="art">🧸</span>
+        <span><strong>not sure what to choose?</strong><br>
     take the quiz → get your perfect idea</span>
-  </a>
-  <section class="shop">
-    <p>you can take these with you. or not.</p>
+    </a>
+    <section class="shop">
+        <p>you can take these with you. or not.</p>
+        <div class="products-grid">
+            <div class="product">
+                <img src="../assets/concrete1.jpg" alt="keychain" class="product-img"/>
+                <div class="product-info">
+                    <h3>concrete #1</h3>
+                    <p>
+                        handmade · raw concrete<br>
+                        7 cm — €30<br>
+                        10 cm — €50
+                    </p>
+                    <a href="https://instagram.com/evg.damk" class="cta-link" target="_blank">DM to order</a>
+                </div>
+            </div>
 
-    <div class="product">
-      <img src="../assets/concrete1.jpg" alt="keychain" class="product-img" />
-      <div class="product-info">
-        <h3>concrete #1</h3>
+            <div class="product">
+                <img src="../assets/keychain1.jpg" alt="keychain" class="product-img"/>
+                <div class="product-info">
+                    <h3>keychain #1</h3>
+                    <p>
+                        random color · hand-poured plastic<br>
+                        €20
+                    </p>
+                    <a href="https://instagram.com/evg.damk" class="cta-link" target="_blank">DM to order</a>
+                </div>
+            </div>
+        </div>
+
+
+    </section>
+    <section class="object">
+        <h2>custom work</h2>
         <p>
-          handmade · raw concrete<br>
-          7 cm — €30<br>
-          10 cm — €50
+            open for custom objects or ideas based on your brief<br>
+            pricing starts at €100<br><br>
+            send me your thoughts — <a href="https://instagram.com/evg.damk" class="cta-link" target="_blank">DM me on
+            Instagram</a>
         </p>
-        <a href="https://instagram.com/evg.damk" class="cta-link" target="_blank">DM to order</a>
-      </div>
-    </div>
-
-    <div class="product">
-      <img src="../assets/keychain1.jpg" alt="keychain" class="product-img" />
-      <div class="product-info">
-        <h3>keychain #1</h3>
-        <p>
-          random color · hand-poured plastic<br>
-          €20
-        </p>
-        <a href="https://instagram.com/evg.damk" class="cta-link" target="_blank">DM to order</a>
-      </div>
-    </div>
-
-
-
-  </section>
-  <section class="object">
-    <h2>custom work</h2>
-    <p>
-      open for custom objects or ideas based on your brief<br>
-      pricing starts at €100<br><br>
-      send me your thoughts — <a href="https://instagram.com/evg.damk" class="cta-link" target="_blank">DM me on Instagram</a>
-    </p>
-  </section>
+    </section>
 </main>
 
 <footer>
-  <img src="../assets/monkey1.png" alt="monkey" class="monkey" id="monkey" />
+    <img src="../assets/monkey1.png" alt="monkey" class="monkey" id="monkey"/>
 </footer>
 
 <script>
-  const monkey = document.getElementById('monkey');
-  const images = ['monkey1.png', 'monkey2.png', 'monkey3.png', 'monkey4.png'];
-  let clickable = true;
+    const monkey = document.getElementById('monkey');
+    const images = ['monkey1.png', 'monkey2.png', 'monkey3.png', 'monkey4.png'];
+    let clickable = true;
 
-  monkey.addEventListener('click', () => {
-    if (!clickable) return;
+    monkey.addEventListener('click', () => {
+        if (!clickable) return;
 
-    const current = monkey.getAttribute('src').split('/').pop();
-    const others = images.filter(img => img !== current);
-    const next = others[Math.floor(Math.random() * others.length)];
+        const current = monkey.getAttribute('src').split('/').pop();
+        const others = images.filter(img => img !== current);
+        const next = others[Math.floor(Math.random() * others.length)];
 
-    const tempImg = new Image();
-    tempImg.onload = () => {
-      monkey.setAttribute('src', '../assets/' + next);
+        const tempImg = new Image();
+        tempImg.onload = () => {
+            monkey.setAttribute('src', '../assets/' + next);
 
-      if (next === 'monkey3.png') {
-        clickable = false;
+            if (next === 'monkey3.png') {
+                clickable = false;
 
-        monkey.style.transition = 'none';
-        monkey.style.transform = 'rotate(0deg) scale(1)';
-        void monkey.offsetWidth;
-        monkey.style.transition = 'transform 1.8s ease-in-out';
-        monkey.style.transform = 'rotate(1440deg) scale(2.5)';
+                monkey.style.transition = 'none';
+                monkey.style.transform = 'rotate(0deg) scale(1)';
+                void monkey.offsetWidth;
+                monkey.style.transition = 'transform 1.8s ease-in-out';
+                monkey.style.transform = 'rotate(1440deg) scale(2.5)';
 
-        setTimeout(() => {
-          monkey.style.transform = 'rotate(0deg) scale(1)';
-          clickable = true;
-        }, 2000);
-      }
-    };
-    tempImg.src = '../assets/' + next;
-  });
+                setTimeout(() => {
+                    monkey.style.transform = 'rotate(0deg) scale(1)';
+                    clickable = true;
+                }, 2000);
+            }
+        };
+        tempImg.src = '../assets/' + next;
+    });
 </script>
 </body>
 </html>
