--- a/objects/index.html
+++ b/objects/index.html
@@ -41,7 +41,12 @@
                         7 cm — €30<br>
                         10 cm — €50
                     </p>
-                    <a href="https://instagram.com/evg.damk" class="cta-link" target="_blank">DM to order</a>
+                    <div id="paypal-container-G4K45YMSFSNVQ"></div>
+                    <script>
+                        paypal.HostedButtons({
+                            hostedButtonId: "G4K45YMSFSNVQ",
+                        }).render("#paypal-container-G4K45YMSFSNVQ")
+                    </script>
                 </div>
             </div>
 
@@ -53,7 +58,12 @@
                         random color · hand-poured plastic<br>
                         €20
                     </p>
-                    <a href="https://instagram.com/evg.damk" class="cta-link" target="_blank">DM to order</a>
+                    <div id="paypal-container-RT43W2P8RWU4N"></div>
+                    <script>
+                        paypal.HostedButtons({
+                            hostedButtonId: "RT43W2P8RWU4N",
+                        }).render("#paypal-container-RT43W2P8RWU4N")
+                    </script>
                 </div>
             </div>
         </div>
