--- a/objects/index.html
+++ b/objects/index.html
@@ -10,6 +10,9 @@
     <script data-goatcounter="https://damk.goatcounter.com/count"
             async src="//gc.zgo.at/count.js"></script>
     <link rel="icon" href="../assets/favicon.ico" type="image/x-icon"/>
+    <script
+            src="https://www.paypal.com/sdk/js?client-id=AbsOgdehpSVdrtpfb3T2FQ4nJ6RU9IRvSA3IO7ymtDdNGHywuVeipSWLhePDQ-DYAxl2_3CGNrpD9QDh&components=hosted-buttons&currency=EUR">
+    </script>
 </head>
 <body>
 <header>
