--- a/objects/index.html
+++ b/objects/index.html
@@ -37,6 +37,7 @@
         <div class="products-grid">
             <div class="product">
 
+                <div class="product-info">
 
                     <div id="paypal-container-G4K45YMSFSNVQ"></div>
                     <script>
@@ -44,10 +45,12 @@
                             hostedButtonId: "G4K45YMSFSNVQ",
                         }).render("#paypal-container-G4K45YMSFSNVQ")
                     </script>
+                </div>
             </div>
 
             <div class="product">
 
+                <div class="product-info">
 
                     <div id="paypal-container-RT43W2P8RWU4N"></div>
                     <script>
@@ -55,6 +58,7 @@
                             hostedButtonId: "RT43W2P8RWU4N",
                         }).render("#paypal-container-RT43W2P8RWU4N")
                     </script>
+                </div>
             </div>
         </div>
 
