--- a/game/index.html
+++ b/game/index.html
@@ -47,7 +47,7 @@
   <nav>
     <a href="/">about</a>
     <a href="/archive">archive</a>
-    <a href="/objects">shop</a>
+    <a href="/shop">shop</a>
     <a href="/game">game</a>
   </nav>
 
