--- a/shop/index.html
+++ b/shop/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="description" content="damk is personal space — drawings, soft memories, small objects."/>
-    <link rel="canonical" href="https://evgdamk.com/objects/"/>
+    <link rel="canonical" href="https://evgdamk.com/shop/"/>
     <title>shop — damk</title>
     <link rel="stylesheet" href="../css/styles.css"/>
     <script data-goatcounter="https://damk.goatcounter.com/count"
@@ -20,7 +20,7 @@
     <nav>
         <a href="/">about</a>
         <a href="/archive">archive</a>
-        <a href="/objects">shop</a>
+        <a href="/shop">shop</a>
         <a href="/game">game</a>
     </nav>
 </header>
