--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta name="description" content="damk is personal space — drawings, soft memories, small objects."/>
-    <link rel="canonical" href="https://evgdamk.com/"/>
+    <meta name="description"
+          content="EVG DAMK — artist creating handmade art objects, concrete figures and custom sculptures. Limited pieces, personal projects, and custom work." /><link rel="canonical" href="https://evgdamk.com/"/>
     <title>EVG DAMK</title>
     <link rel="stylesheet" href="css/styles.css"/>
     <script data-goatcounter="https://damk.goatcounter.com/count"
