--- a/shop/index.html
+++ b/shop/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta name="description" content="damk is personal space — drawings, soft memories, small objects."/>
-    <link rel="canonical" href="https://evgdamk.com/shop/"/>
+    <meta name="description"
+          content="EVG DAMK — artist creating handmade art objects, concrete figures and custom sculptures. Limited pieces, personal projects, and custom work." /><link rel="canonical" href="https://evgdamk.com/shop/"/>
     <title>shop — damk</title>
     <link rel="stylesheet" href="../css/styles.css"/>
     <script data-goatcounter="https://damk.goatcounter.com/count"
@@ -13,6 +13,25 @@
     <script
             defer
             src="https://www.paypal.com/sdk/js?client-id=AbsOgdehpSVdrtpfb3T2FQ4nJ6RU9IRvSA3IO7ymtDdNGHywuVeipSWLhePDQ-DYAxl2_3CGNrpD9QDh&components=hosted-buttons&currency=EUR">
+    </script>
+
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "Artist",
+            "name": "Damk",
+            "url": "https://evgdamk.com",
+            "sameAs": [
+                "https://instagram.com/evg.damk"
+            ],
+            "description": "Artist creating handmade art objects, concrete figures and custom sculptures.",
+            "knowsAbout": [
+                "handmade art objects",
+                "concrete figures",
+                "custom sculpture",
+                "designer art figures"
+            ]
+        }
     </script>
 </head>
 <body>
@@ -26,7 +45,10 @@
 </header>
 
 <main>
-    <h1>shop</h1>
+    <h1>art objects & handmade figures</h1>
+    <p class="seo-sub">
+        Limited concrete figures and custom art objects by EVG DAMK.
+    </p>
     <!-- quiz banner -->
     <a class="quiz-banner" href="/quiz/" aria-label="find your perfect art figure">
         <span class="art">🧸</span>
