--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>EVG DAMK — Artist Creating Handmade Art Objects & Figures</title>
     <meta name="description"
-          content="EVG DAMK — artist creating handmade art objects, concrete figures and custom sculptures. Limited pieces, personal projects, and custom work." /><link rel="canonical" href="https://evgdamk.com/"/>
-    <title>EVG DAMK</title>
+          content="Damk is an artist creating handmade art objects, concrete figures and sculptures inspired by memory, quiet moments and urban culture.">
     <link rel="stylesheet" href="css/styles.css"/>
     <script data-goatcounter="https://damk.goatcounter.com/count"
             async src="//gc.zgo.at/count.js"></script>
     <link rel="icon" href="assets/favicon.ico" type="image/x-icon"/>
+    <title>Damk — Artist Creating Handmade Art Objects & Figures</title>
+
+    <meta name="description"
+          content="Damk is an artist creating handmade art objects, concrete figures and sculptures inspired by memory, quiet moments and urban culture.">
 </head>
 <body>
 <header>
@@ -22,7 +26,10 @@
 </header>
 
 <main>
-    <h1>EVG DAMK</h1>
+    <h1>Artist creating handmade art objects</h1>
+    <p class="seo-sub">
+        Concrete figures, sculptures and personal objects by EVG DAMK.
+    </p>
     <div class="about-photo">
         <img src="assets/about.jpg" alt="DAMK sitting with his dog" class="about-img"/>
     </div>
