--- a/quiz/index.html
+++ b/quiz/index.html
@@ -3,13 +3,19 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Take a 4‑step quiz to get a tailored idea for a custom art figure. Copy the message and DM on Instagram to start your commission." />
-    <title>Find Your Art Figure — 4‑Step Quiz | evgdamk</title>
+    <title>Art Object Quiz — Find Your Personal Art Piece</title>
+
+    <meta name="description"
+          content="Interactive quiz to help you find a personal art object or idea based on your mood and preferences.">
     <link rel="stylesheet" href="../css/styles.css" />
 </head>
 <body>
     <header>
-        <h1>Find your art figure</h1>
+        <h1>Find your personal art object</h1>
+
+        <p class="seo-sub">
+            Answer a few questions to explore a fitting art idea or object.
+        </p>
     </header>
     <main>
         <form id="quiz-form">
