--- a/shop/index.html
+++ b/shop/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Handmade Art Objects & Concrete Figures — EVG DAMK</title>
     <meta name="description"
-          content="EVG DAMK — artist creating handmade art objects, concrete figures and custom sculptures. Limited pieces, personal projects, and custom work." /><link rel="canonical" href="https://evgdamk.com/shop/"/>
-    <title>shop — damk</title>
+          content="Handmade art objects and concrete figures by EVG DAMK. Limited sculptural pieces and custom art objects.">
     <link rel="stylesheet" href="../css/styles.css"/>
     <script data-goatcounter="https://damk.goatcounter.com/count"
             async src="//gc.zgo.at/count.js"></script>
@@ -74,6 +74,10 @@
                 </div>
             </div>
         </div>
+        <p class="seo-text">
+            Each art object is handmade and created as a quiet personal artifact.
+            Concrete figures and sculptures are produced in limited quantities or as custom pieces.
+        </p>
 
 
     </section>
