--- a/shop/index.html
+++ b/shop/index.html
@@ -19,7 +19,7 @@
         {
             "@context": "https://schema.org",
             "@type": "Artist",
-            "name": "Damk",
+            "name": "EVG DAMK",
             "url": "https://evgdamk.com",
             "sameAs": [
                 "https://instagram.com/evg.damk"
