--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>EVG DAMK — Artist Creating Handmade Art Objects & Figures</title>
     <meta name="description"
-          content="Damk is an artist creating handmade art objects, concrete figures and sculptures inspired by memory, quiet moments and urban culture.">
+          content="EVG DAMK is an artist creating handmade art objects, concrete figures and sculptures inspired by memory, quiet moments and urban culture.">
     <link rel="stylesheet" href="css/styles.css"/>
     <script data-goatcounter="https://damk.goatcounter.com/count"
             async src="//gc.zgo.at/count.js"></script>
     <link rel="icon" href="assets/favicon.ico" type="image/x-icon"/>
-    <title>Damk — Artist Creating Handmade Art Objects & Figures</title>
+    <title>EVG DAMK — Artist Creating Handmade Art Objects & Figures</title>
 
     <meta name="description"
-          content="Damk is an artist creating handmade art objects, concrete figures and sculptures inspired by memory, quiet moments and urban culture.">
+          content="EVG DAMK is an artist creating handmade art objects, concrete figures and sculptures inspired by memory, quiet moments and urban culture.">
 </head>
 <body>
 <header>
