--- a/shop/index.html
+++ b/shop/index.html
@@ -10,9 +10,47 @@
     <script data-goatcounter="https://damk.goatcounter.com/count"
             async src="//gc.zgo.at/count.js"></script>
     <link rel="icon" href="../assets/favicon.ico" type="image/x-icon"/>
-    <script
-            defer
-            src="https://www.paypal.com/sdk/js?client-id=AbsOgdehpSVdrtpfb3T2FQ4nJ6RU9IRvSA3IO7ymtDdNGHywuVeipSWLhePDQ-DYAxl2_3CGNrpD9QDh&components=hosted-buttons&currency=EUR">
+<!--    <script-->
+<!--            defer-->
+<!--            src="https://www.paypal.com/sdk/js?client-id=AbsOgdehpSVdrtpfb3T2FQ4nJ6RU9IRvSA3IO7ymtDdNGHywuVeipSWLhePDQ-DYAxl2_3CGNrpD9QDh&components=hosted-buttons&currency=EUR">-->
+<!--    </script>-->
+
+    <script>
+        function loadPayPalSDK() {
+            if (window.__paypalLoading) return window.__paypalLoading;
+            if (window.paypal) return Promise.resolve();
+
+            window.__paypalLoading = new Promise((resolve, reject) => {
+                const s = document.createElement("script");
+                s.src = "https://www.paypal.com/sdk/js?client-id=AbsOgdehpSVdrtpfb3T2FQ4nJ6RU9IRvSA3IO7ymtDdNGHywuVeipSWLhePDQ-DYAxl2_3CGNrpD9QDh&components=hosted-buttons&currency=EUR";
+                s.async = true;
+                s.onload = () => resolve();
+                s.onerror = reject;
+                document.head.appendChild(s);
+            });
+
+            return window.__paypalLoading;
+        }
+
+        document.addEventListener("DOMContentLoaded", () => {
+            // триггер: как только зона shop близко — подгружаем SDK
+            const shop = document.querySelector(".shop");
+            if (!shop) return;
+
+            const io = new IntersectionObserver(async (entries) => {
+                if (!entries.some(e => e.isIntersecting)) return;
+                io.disconnect();
+                try {
+                    await loadPayPalSDK();
+                    // тут вызывай код из решения №1: startObservers()
+                    // (можно просто вынести startObservers/renderOne/hostedButtons выше и тут вызвать startObservers())
+                } catch (e) {
+                    console.error(e);
+                }
+            }, { rootMargin: "600px 0px" });
+
+            io.observe(shop);
+        });
     </script>
 
     <script type="application/ld+json">
