--- a/shop/index.html
+++ b/shop/index.html
@@ -191,7 +191,7 @@
 
     function setCopiedState(btn) {
         const prev = btn.textContent;
-        btn.textContent = 'copied';
+        btn.textContent = 'copied ✓';
         btn.disabled = true;
         setTimeout(() => {
             btn.textContent = prev;
