--- a/shop/index.html
+++ b/shop/index.html
@@ -70,7 +70,7 @@
         <div class="products-grid">
 
             <div class="product" id="po-2">
-                <img src="../assets/shop/concrete_po_2.jpg" alt="PO-2 concrete figure" class="product-img"/>
+                <img src="../assets/shop/optimized/concrete_po_2.jpg" alt="PO-2 concrete figure" class="product-img" width="1280" height="1600" decoding="async" fetchpriority="high"/>
                 <div class="product-info">
                     <h3>PO-2</h3>
                     <p>handmade · raw concrete | plaster · 10 cm</p>
@@ -83,7 +83,7 @@
             </div>
 
             <div class="product" id="weight-3">
-                <img src="../assets/shop/concrete_weight_3.jpg" alt="Weight #3 concrete object" class="product-img"/>
+                <img src="../assets/shop/optimized/concrete_weight_3.jpg" alt="Weight #3 concrete object" class="product-img" width="1280" height="1600" loading="lazy" decoding="async"/>
                 <div class="product-info">
                     <h3>weight #3</h3>
                     <p>handmade · raw concrete · 10 cm</p>
@@ -96,7 +96,7 @@
             </div>
 
             <div class="product" id="weight-2">
-                <img src="../assets/shop/concrete_weight_2.jpg" alt="Weight #2 concrete object" class="product-img"/>
+                <img src="../assets/shop/optimized/concrete_weight_2.jpg" alt="Weight #2 concrete object" class="product-img" width="1280" height="1600" loading="lazy" decoding="async"/>
                 <div class="product-info">
                     <h3>weight #2</h3>
                     <p>handmade · raw concrete · 8 cm</p>
@@ -109,7 +109,7 @@
             </div>
 
             <div class="product" id="weight-1">
-                <img src="../assets/shop/concrete_weight_1.jpg" alt="Weight #1 concrete object" class="product-img"/>
+                <img src="../assets/shop/optimized/concrete_weight_1.jpg" alt="Weight #1 concrete object" class="product-img" width="1280" height="1600" loading="lazy" decoding="async"/>
                 <div class="product-info">
                     <h3>weight #1</h3>
                     <p>handmade · raw concrete · 10 cm</p>
